# xunji

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CODEBUDDY.md  CONTRIBUTING.md  README.md  期末要求.txt
.github/workflows/: ci.yml  docker-publish.yml
ai-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
ai-service/app/: main.py  schemas.py  service.py
ai-service/app/clients/: dashscope.py  image_fetcher.py
ai-service/app/core/: config.py  url_security.py
ai-service/app/services/: _baseline.py  answer.py  classify.py  match.py  sensitive.py
ai-service/docs/: README.md
ai-service/models/: README.md
ai-service/tests/: conftest.py  test_baseline.py  test_clients_dashscope.py  test_config.py  test_main_routes.py  test_schemas.py  test_service.py  test_services_fallback.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260428_0001_initial_backend_a_tables.py  20260428_0002_backend_b_tables.py  20260428_0003_item_review_status.py  20260711_0004_core_state_machine.py  20260711_0005_governance_review_comments.py  20260711_0006_match_score_provenance.py  20260711_0007_report_unique_target.py  20260711_0008_durable_jobs.py  20260713_0009_claim_answer_snapshots.py
backend/app/: main.py
backend/app/admin/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/claim/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/common/: errors.py  pagination.py  response.py  utils.py  validators.py
backend/app/core/: ai_client.py  auth.py  bootstrap.py  config.py  exceptions.py  object_storage.py  security.py
backend/app/credit/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/db/: session.py  ulid.py
backend/app/item/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/job/: __init__.py  models.py  repository.py  runner.py  service.py
backend/app/match/: deps.py  jobs.py  models.py  repository.py  router.py  schemas.py  scoring.py  service.py
backend/app/notification/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/operation_log/: models.py  repository.py  service.py
backend/app/user/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/sql/: README.md  schema.sql  seed-demo.sql
backend/tests/: conftest.py
backend/tests/unit/: test_migrations.py  test_object_storage.py  test_sensitive_asset_access.py
backend/tests/unit/admin/: test_governance.py  test_router.py
backend/tests/unit/claim/: test_service.py
backend/tests/unit/common/: test_utils.py
backend/tests/unit/credit/: test_service.py
backend/tests/unit/item/: test_publish_with_ai.py  test_repository.py  test_review_comment_contract.py  test_router.py  test_service.py
backend/tests/unit/job/: __init__.py  test_durable_jobs.py
backend/tests/unit/match/: test_ai_client.py  test_high_priority.py  test_router.py  test_scoring.py  test_trigger.py
backend/tests/unit/notification/: test_service.py
backend/tests/unit/user/: test_auth_security.py  test_router.py  test_service.py
deploy/: README.md
deploy/docker/: .env.example  README.md  docker-compose.frontend.yml  docker-compose.podman-host.yml  docker-compose.production.yml  docker-compose.yml
deploy/env/: .env.example
deploy/scripts/: README.md
docs/: README.md
docs/api/: README.md  admin.md  ai-service.md  auth.md  claim.md  conventions.md  items.md  match.md  notification.md
docs/architecture/: README.md  core-flow-design.md  credit-rules.md  database-design.md  deployment-design.md  enums.md  frontend-design-system.md  interaction-logic-model.md  matching-rules.md  module-design.md  system-overview.md
docs/project-management/: README.md  development-plan.md  requirements-baseline.md  risk-management.md  wbs-and-roles.md
docs/testing/: README.md  acceptance-checklist.md  full-code-audit-2026-07-11.md  p0-p1-remediation-2026-07-11.md  remaining-p1-p2-audit-2026-07-11.md  test-cases.md  test-plan.md
frontend/: .dockerignore  README.md
frontend/admin-web/: Dockerfile  README.md  components.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
frontend/docker/: 40-resolver.sh
frontend/shared/: README.md
frontend/user-app/: Dockerfile  README.md  components.d.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
report/: README.md  build-all.sh  export-diagrams.sh
report/01-需求分析报告/: content.tex  main.tex
report/02-系统建模报告/: content.tex  main.tex
report/03-架构设计文档/: content.tex  main.tex
report/04-软件工程化说明文档/: content.tex  main.tex
report/05-软件测试与质量保证报告/: content.tex  main.tex
report/06-软件配置与运维文档/: content.tex  main.tex
report/07-团队报告/: main.tex  (+1 more)
(+113 files in other folders)
