[project]
name = "xunji-ai-service"
version = "0.1.0"
description = "Xunji AI helper service: item classification, similarity scoring, sensitive detection"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "loguru>=0.7",
    "numpy>=2.0",
    "pillow>=10.4",
    # Model runtime libs: pick concrete versions when selecting models.
    # Examples (uncomment when used):
    # "torch>=2.4",
    # "transformers>=4.44",
    # "sentence-transformers>=3.1",
    # "onnxruntime>=1.19",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N", "ASYNC", "RUF"]
ignore = ["B008"]                      # FastAPI Depends pattern

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"app/clients/dashscope.py" = ["RUF001"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["numpy.*", "PIL.*", "torch.*", "transformers.*", "onnxruntime.*"]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: slow tests, skipped in fast CI",
    "model: tests that require downloading model weights",
]
