[project]
name = "xunji-backend"
version = "0.1.0"
description = "Xunji campus lost-and-found main backend (FastAPI)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncmy>=0.2.10",                 # async MySQL driver
    "alembic>=1.13",
    "python-ulid>=3.0",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",  # JWT
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.12",        # file uploads
    "minio>=7.2",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",                     # also used in tests
    "ruff>=0.7",
    "mypy>=1.13",
    "types-python-jose>=3.3",
    "aiosqlite>=0.20",                 # for sqlite-based unit tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "SIM",           # flake8-simplify
    "N",             # pep8-naming
    "ASYNC",         # async-specific
    "RUF",           # ruff-specific
]
ignore = [
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]                  # allow assert in tests
"alembic/versions/*" = ["E501"]        # generated files may exceed line length
"app/common/pagination.py" = ["N815"]  # camelCase required by API contract
"app/common/response.py" = ["N815"]    # camelCase required by API contract
"app/item/schemas.py" = ["N815"]       # camelCase required by API contract
"app/user/schemas.py" = ["N815"]       # camelCase required by API contract

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false    # FastAPI decorators are dynamic
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["asyncmy.*", "minio.*"]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: slow tests, skipped in fast CI",
    "integration: tests requiring MySQL/MinIO",
]

# ---------- Coverage ----------
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
